# nrf-multi-image-fota

./: CMakeLists.txt  README.md  patches.yml  pm_static_nrf9151dk_nrf9151_ns.yml  prj.conf  sysbuild.cmake  sysbuild.conf  west.yml
app0/boards/: nrf9151dk_nrf9151_ns.overlay
app0/include/: gnss.h
app0/src/: firmware_update.c  main.c
app1/: CMakeLists.txt  prj.conf
app1/src/: firmware_update.c  main.c
bank0/: CMakeLists.txt  prj.conf
bank0/src/: gnss.c  main.c
boards/: nrf9151dk_nrf9151_ns.overlay
mcuboot_hooks/src/: boot_hooks.c
patches/nrf/: 0001-lwm2m-firmware-double-bank-support.patch  25.patch
src/: main.c
sysbuild/: mcuboot.conf
